# PDice

./: README.md
posb_dices/: CMakeLists.txt  PDiceConfig.h.in  a.out  dice.cpp  dice.h  initial.txt  main.cpp
